# docs/swagger.json
@@ -32,7 +32,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/rip_internal_app_dto.RefreshTokenRequest"
+                            "$ref": "#/definitions/dto.RefreshTokenRequest"
                         }
                     }
                 ],
@@ -40,19 +40,13 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/rip_internal_app_dto.AuthResponse"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/rip_internal_app_dto.ErrorResponse"
+                            "$ref": "#/definitions/dto.AuthResponse"
                         }
                     },
                     "401": {
                         "description": "Unauthorized",
                         "schema": {
-                            "$ref": "#/definitions/rip_internal_app_dto.ErrorResponse"
+                            "$ref": "#/definitions/dto.ErrorResponse"
                         }
                     }
                 }
@@ -78,7 +72,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/rip_internal_app_dto.SignInRequest"
+                            "$ref": "#/definitions/dto.SignInRequest"
                         }
                     }
                 ],
@@ -86,19 +80,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/rip_internal_app_dto.AuthResponse"
+                            "$ref": "#/definitions/dto.AuthResponse"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/rip_internal_app_dto.ErrorResponse"
+                            "$ref": "#/definitions/dto.ErrorResponse"
                         }
                     },
                     "401": {
                         "description": "Unauthorized",
                         "schema": {
-                            "$ref": "#/definitions/rip_internal_app_dto.ErrorResponse"
+                            "$ref": "#/definitions/dto.ErrorResponse"
                         }
                     }
                 }
@@ -126,19 +120,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/rip_internal_app_dto.MessageResponse"
+                            "$ref": "#/definitions/dto.MessageResponse"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/rip_internal_app_dto.ErrorResponse"
+                            "$ref": "#/definitions/dto.ErrorResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/rip_internal_app_dto.ErrorResponse"
+                            "$ref": "#/definitions/dto.ErrorResponse"
                         }
                     }
                 }
@@ -164,7 +158,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/rip_internal_app_dto.SignUpRequest"
+                            "$ref": "#/definitions/dto.SignUpRequest"
                         }
                     }
                 ],
@@ -172,19 +166,19 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/rip_internal_app_dto.AuthResponse"
+                            "$ref": "#/definitions/dto.AuthResponse"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/rip_internal_app_dto.ErrorResponse"
+                            "$ref": "#/definitions/dto.ErrorResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/rip_internal_app_dto.ErrorResponse"
+                            "$ref": "#/definitions/dto.ErrorResponse"
                         }
                     }
                 }
@@ -254,7 +248,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/rip_internal_app_ds.Route"
+                                "$ref": "#/definitions/ds.Route"
                             }
                         }
                     }
@@ -281,7 +275,7 @@
                     "200": {
                         "description": "route",
                         "schema": {
-                            "$ref": "#/definitions/rip_internal_app_ds.Route"
+                            "$ref": "#/definitions/ds.Route"
                         }
                     }
                 }
@@ -310,7 +304,7 @@
                     "200": {
                         "description": "route",
                         "schema": {
-                            "$ref": "#/definitions/rip_internal_app_ds.Route"
+                            "$ref": "#/definitions/ds.Route"
                         }
                     }
                 }
@@ -336,7 +330,7 @@
                     "200": {
                         "description": "route",
                         "schema": {
-                            "$ref": "#/definitions/rip_internal_app_ds.Route"
+                            "$ref": "#/definitions/ds.Route"
                         }
                     }
                 }
@@ -435,6 +429,15 @@
                         "schema": {
                             "type": "object"
                         }
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
                     }
                 }
             },
@@ -461,6 +464,15 @@
                         "schema": {
                             "type": "object"
                         }
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
                     }
                 }
             }
@@ -507,7 +519,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/rip_internal_app_dto.SpeedRequest"
+                                "$ref": "#/definitions/dto.SpeedRequest"
                             }
                         }
                     }
@@ -567,7 +579,7 @@
                     "200": {
                         "description": "response",
                         "schema": {
-                            "$ref": "#/definitions/rip_internal_app_dto.SpeedRequestDetailedResponse"
+                            "$ref": "#/definitions/dto.SpeedRequestDetailedResponse"
                         }
                     }
                 }
@@ -599,7 +611,7 @@
                     "200": {
                         "description": "request",
                         "schema": {
-                            "$ref": "#/definitions/rip_internal_app_dto.UpdateSpeedRequest"
+                            "$ref": "#/definitions/dto.UpdateSpeedRequest"
                         }
                     }
                 }
@@ -702,7 +714,7 @@
                     "200": {
                         "description": "response",
                         "schema": {
-                            "$ref": "#/definitions/rip_internal_app_dto.SpeedRequestDetailedResponse"
+                            "$ref": "#/definitions/dto.SpeedRequestDetailedResponse"
                         }
                     }
                 }
@@ -730,19 +742,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/rip_internal_app_dto.UserResponse"
+                            "$ref": "#/definitions/dto.UserResponse"
                         }
                     },
                     "401": {
                         "description": "Unauthorized",
                         "schema": {
-                            "$ref": "#/definitions/rip_internal_app_dto.ErrorResponse"
+                            "$ref": "#/definitions/dto.ErrorResponse"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/rip_internal_app_dto.ErrorResponse"
+                            "$ref": "#/definitions/dto.ErrorResponse"
                         }
                     }
                 }
@@ -771,7 +783,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/rip_internal_app_dto.UpdateUserRequest"
+                            "$ref": "#/definitions/dto.UpdateUserRequest"
                         }
                     }
                 ],
@@ -779,19 +791,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/rip_internal_app_dto.MessageResponse"
+                            "$ref": "#/definitions/dto.MessageResponse"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/rip_internal_app_dto.ErrorResponse"
+                            "$ref": "#/definitions/dto.ErrorResponse"
                         }
                     },
                     "401": {
                         "description": "Unauthorized",
                         "schema": {
-                            "$ref": "#/definitions/rip_internal_app_dto.ErrorResponse"
+                            "$ref": "#/definitions/dto.ErrorResponse"
                         }
                     }
                 }
@@ -799,7 +811,7 @@
         }
     },
     "definitions": {
-        "rip_internal_app_ds.Route": {
+        "ds.Route": {
             "type": "object",
             "properties": {
                 "delay": {
@@ -825,7 +837,7 @@
                 }
             }
         },
-        "rip_internal_app_dto.AuthResponse": {
+        "dto.AuthResponse": {
             "type": "object",
             "properties": {
                 "access_token": {
@@ -844,11 +856,11 @@
                     "type": "string"
                 },
                 "user": {
-                    "$ref": "#/definitions/rip_internal_app_dto.UserResponse"
+                    "$ref": "#/definitions/dto.UserResponse"
                 }
             }
         },
-        "rip_internal_app_dto.ErrorResponse": {
+        "dto.ErrorResponse": {
             "type": "object",
             "properties": {
                 "error": {
@@ -856,7 +868,7 @@
                 }
             }
         },
-        "rip_internal_app_dto.MessageResponse": {
+        "dto.MessageResponse": {
             "type": "object",
             "properties": {
                 "message": {
@@ -864,7 +876,7 @@
                 }
             }
         },
-        "rip_internal_app_dto.RefreshTokenRequest": {
+        "dto.RefreshTokenRequest": {
             "type": "object",
             "required": [
                 "refresh_token"
@@ -875,7 +887,7 @@
                 }
             }
         },
-        "rip_internal_app_dto.RouteInfo": {
+        "dto.RouteInfo": {
             "type": "object",
             "properties": {
                 "description": {
@@ -898,7 +910,7 @@
                 }
             }
         },
-        "rip_internal_app_dto.RouteSpeedRequestInfo": {
+        "dto.RouteSpeedRequestInfo": {
             "type": "object",
             "properties": {
                 "arrival_date": {
@@ -909,7 +921,7 @@
                 }
             }
         },
-        "rip_internal_app_dto.SignInRequest": {
+        "dto.SignInRequest": {
             "type": "object",
             "required": [
                 "login",
@@ -924,7 +936,7 @@
                 }
             }
         },
-        "rip_internal_app_dto.SignUpRequest": {
+        "dto.SignUpRequest": {
             "type": "object",
             "required": [
                 "login",
@@ -932,7 +944,9 @@
             ],
             "properties": {
                 "login": {
-                    "type": "string"
+                    "type": "string",
+                    "maxLength": 50,
+                    "minLength": 3
                 },
                 "password": {
                     "type": "string",
@@ -940,7 +954,7 @@
                 }
             }
         },
-        "rip_internal_app_dto.SpeedRequest": {
+        "dto.SpeedRequest": {
             "type": "object",
             "properties": {
                 "completion_date": {
@@ -969,7 +983,7 @@
                 }
             }
         },
-        "rip_internal_app_dto.SpeedRequestDetailedResponse": {
+        "dto.SpeedRequestDetailedResponse": {
             "type": "object",
             "properties": {
                 "result": {
@@ -978,21 +992,21 @@
                 "route_req": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/rip_internal_app_dto.RouteSpeedRequestInfo"
+                        "$ref": "#/definitions/dto.RouteSpeedRequestInfo"
                     }
                 },
                 "routes": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/rip_internal_app_dto.RouteInfo"
+                        "$ref": "#/definitions/dto.RouteInfo"
                     }
                 },
                 "speed_request": {
-                    "$ref": "#/definitions/rip_internal_app_dto.SpeedRequest"
+                    "$ref": "#/definitions/dto.SpeedRequest"
                 }
             }
         },
-        "rip_internal_app_dto.UpdateSpeedRequest": {
+        "dto.UpdateSpeedRequest": {
             "type": "object",
             "properties": {
                 "departure_date": {
@@ -1000,7 +1014,7 @@
                 }
             }
         },
-        "rip_internal_app_dto.UpdateUserRequest": {
+        "dto.UpdateUserRequest": {
             "type": "object",
             "properties": {
                 "login": {
@@ -1011,7 +1025,7 @@
                 }
             }
         },
-        "rip_internal_app_dto.UserResponse": {
+        "dto.UserResponse": {
             "type": "object",
             "properties": {
                 "is_moderator": {
